# RAG_application

./: .gitignore  app.py  check_db.py  eval_dataset.json  evaluate.py  graph.py  ingest.ipynb  ingest.py  main.py  pyproject.toml  retriever.py
data/books/: Carl Jung - Modern Man in Search of a Soul(psychology).epub  Scott Peck - Further Along The Road Less Travelled(psychology).epub  Scott Peck - Glimpses of the Devil A Psychiatrist’s Personal Accounts of Possession, Exorcism, and Redemption(psychology).epub  Sigmund Freud - Civilization and Its Discontents(philosophy).epub  Sigmund Freud - The Collected Works of Sigmund Freud(psychology).epub  Sigmund Freud - The Future of an Illusion(philosophy).epub  Sigmund Freud - The Interpretation of Dreams(psychology).epub
